# dcase2021_task2_baseline_ae

baseline_keras/: 00_train.py  01_test.py  common.py  keras_model.py
baseline_pytorch/: README.md  all_run.sh  config.yaml  pyproject.toml  pytorch_model.py  test.py  training.py  util.py
