[tool.poetry]
name = "complex-autoencoder-baseline"
version = "0.1.0"
description = "autoencoder"
authors = ["nissy-shota <shota_4410@icloud.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.3"
torch = "^1.11.0"
scipy = "^1.8.0"
torchinfo = "^1.6.5"
joblib = "^1.1.0"
PyYAML = "^6.0"
llvmlite = "0.31.0"
librosa = "^0.9.1"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
